[tool.poetry]
name = "cmip7-prep"
version = "0.1.0"
description = "Prepare CESM outputs for CMIP7 using CMOR, with SE->1deg regridding."
authors = ["Jim Edwards <jedwards@example.com>"]
readme = "README.md"
packages = [{ include = "cmip7_prep" }]
# Include non-Python data files in both sdist and wheel
include = [
  { path = "cmip7_prep/data/**" }
]

[tool.poetry.dependencies]
python = ">=3.10.13,<3.14"
cmor = "^3.14.0"

xarray = "^2024.9.0"
netCDF4 = "^1.7.2"
cftime = "^1.6.4"
numpy = "^2.0.0"
pandas = "^2.3.2"
# esmpy = { git = "https://github.com/esmf-org/esmf.git", tag = "v8.9.0", subdirectory = "src/addon/esmpy" }
xesmf = "^0.8.10"
# typer = { version = "^0.19.1", extras = ["all"] }
PyYAML = "^6.0.2"
geocat-comp = "^2025.09.0"
gents = "^0.1.0"
# # CMOR typically comes from conda-forge; if pip isn't viable, install it outside Poetry or via a wheel.
# # cmor = "^3.8.0"

# Dependency management is now handled by your conda environment.
# Example setup:
#   conda create -n cmip7-prep python=3.13 xarray numpy dask xesmf cmor cftime pyyaml click pandas tqdm
#   conda activate cmip7-prep
#   pip install dulwich
# Optional performance
dask = {extras = ["array", "distributed"], version = "^2024.7.0", optional = true}
zarr = {version = "^2.18.2", optional = true}

[tool.poetry.extras]
parallel = ["dask", "zarr"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.0"
mypy = "^1.10.0"
pre-commit = "4.3.0"

[tool.poetry.scripts]
# cmip7-prep = "cmip7_prep.cli:app"
monthly_cmor = "scripts.monthly_cmor:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
